@@ -1,3 +1,4 @@
+* Add attachment preview
 * Support document widget
 * Support icon of type URL
 * Allow sending email with existing attachments
